--- a/index.html
+++ b/index.html
@@ -51,12 +51,16 @@
         </div>
         <div class="row">
             <div class="left col-sm-8 bg-brown bg-lighten-xl ">
-                <div class=" row body d-flex  d-flex justify-content-around  " id="pokemon-list">
+                <div class=" row body d-flex  d-flex justify-content-around" id="pokemon-list">
 
                 </div>
 
             </div>
-            <div class="col-sm-4 " id="pokemon-info">
+            <div class="col-sm-4 d-flex justify-content-start"  >
+                
+                <div  id="pokemon-info" >
+
+                </div>
 
             </div>
         </div>
