--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     </div>
 
-    <script src="./pokemon.js"></script>
+    <script src="pokemon.js"></script>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
