--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="card-body">
                         <div class="d-flex flex-column flex-xl-row ">
                             <div class="row">
-                                <div class="col-9">
+                                <div class="col-9" >
                                     <div class="flex-lg-row-fluid  mb-20 mb-xl-0">
                                         <div class="mb-0">
                                             
@@ -33,7 +33,7 @@
                                                                 <a class="nav-link btn btn-color-gray-600 btn-active-secondary btn-active-color-primary fw-bolder fs-8 fs-lg-base nav-link  px-lg-3 mx-1 text-uppercase" href="#">Gen 1</a>
                                                             </li>
                                                             <li class="nav-item my-1 mx-4 d-flex">
-                                                                <a class=" nav-link btn btn-color-gray-600 btn-active-secondary btn-active-color-primary fw-bolder fs-8 fs-lg-base nav-link  px-lg-3 mx-1 text-uppercase" href="#">Gen 2</a>
+                                                                <a class="nav-link btn btn-color-gray-600 btn-active-secondary btn-active-color-primary fw-bolder fs-8 fs-lg-base nav-link  px-lg-3 mx-1 text-uppercase" href="#">Gen 2</a>
                                                             </li>
                                                             <li class="nav-item my-1 mx-4 d-flex">
                                                                 <a class=" nav-link btn btn-color-gray-600 btn-active-secondary btn-active-color-primary fw-bolder fs-8 fs-lg-base nav-link  px-lg-3 mx-1 text-uppercase" href="#">Gen 3</a>
@@ -61,7 +61,7 @@
                                                 </div>
                                             </div>
                                             
-                                            <div class="mb-10">
+                                            <div class="mb-10" id ="pokemonarray">
                                                 <div class="mb-10">
                                                     <div class="d-flex flex-column">
                                                         <div class="row card-round d-flex"  id="pokemon-list">
